# documind-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: d5379eb03922_create_initial_6_tables.py
data/eval/: hr_policy_qa.json
data/eval/results/: ragas_baseline_20260716_010021.json  ragas_baseline_20260716_010820.json  ragas_self_rag_20260717_003918.json  ragas_v1_20260717_003023.json  ragas_v1_20260717_004257.json
data/samples/: sample_hr_policy.txt
deployment/docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
frontend/: app.py
frontend/react_app/: package-lock.json  package.json  tailwind.config.js
frontend/react_app/src/: App.jsx  index.css
scripts/: evaluate_ragas.py
src/: __init__.py  main.py  pipeline.py
src/agentic/: self_rag.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  api_routes.py  (+2 more)
src/auth/: dependencies.py  security.py
src/chunking/: __init__.py  chunker.py
src/db/: base.py  connection.py  models.py
src/embeddings/: __init__.py  embedder.py
src/generation/: __init__.py  generator.py
src/ingestion/: __init__.py  doc_loader.py
src/memory/: chat_memory.py
src/reranking/: __init__.py  reranker.py
src/retrieval/: __init__.py  retriever.py  vector_store.py
src/utils/: config.py  exceptions.py  file_utils.py  logger.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_exceptions.py  test_file_utils.py  test_pipeline_units.py
(+8 files in other folders)
